Looking for bugs..

--- a/Librainian/.editorconfig
+++ b/Librainian/.editorconfig
@@ -293,6 +293,9 @@ resharper_use_string_interpolation_highlighting = error
 resharper_virtual_member_call_in_constructor_highlighting = hint
 resharper_void_method_with_must_use_return_value_attribute_highlighting = error
 
+# IDE0051: Remove unused private members
+dotnet_diagnostic.IDE0051.severity = none
+
 [*.{appxmanifest,axml,build,config,cs,csproj,dbml,discomap,dtd,jsproj,lsproj,njsproj,nuspec,proj,props,proto,resw,resx,StyleCop,targets,tasks,vbproj,xml,xsd}]
 indent_style = tab
 indent_size = tab
