--- a/Librainian/Librainian.csproj
+++ b/Librainian/Librainian.csproj
@@ -67,13 +67,14 @@
 	  <None Remove="Parsing\Parsing\**" />
 	</ItemGroup>
 	<ItemGroup>
+		<PackageReference Include="Ben.Demystifier" Version="0.3.0" />
 		<PackageReference Include="CommandLineParser" Version="2.8.0" />
 		<PackageReference Include="FluentAssertions" Version="5.10.3" />
 		<PackageReference Include="JetBrains.Annotations" Version="2020.3.0" />
 		<PackageReference Include="LinqFaster.SIMD" Version="1.0.3" />
 		<PackageReference Include="Microsoft.Data.SqlClient" Version="2.1.2" />
 		<PackageReference Include="Microsoft.Database.ManagedEsent" Version="2.0.1" />
-		<PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 		<PackageReference Include="PooledAwait" Version="1.0.49" />
 		<PackageReference Include="Rationals" Version="1.4.0" />
 		<PackageReference Include="System.Linq.Async" Version="5.0.0" />
