--- a/Librainian/Librainian.csproj
+++ b/Librainian/Librainian.csproj
@@ -69,7 +69,7 @@
 		<PackageReference Include="Ben.Demystifier" Version="0.3.0" />
 		<PackageReference Include="CommandLineParser" Version="2.8.0" />
 		<PackageReference Include="FluentAssertions" Version="5.10.3" />
-		<PackageReference Include="JetBrains.Annotations" Version="2020.3.0" />
+		<PackageReference Include="JetBrains.Annotations" Version="2021.1.0" />
 		<PackageReference Include="LinqFaster.SIMD" Version="1.0.3" />
 		<PackageReference Include="Microsoft.Data.SqlClient" Version="2.1.2" />
 		<PackageReference Include="Microsoft.Database.ManagedEsent" Version="2.0.1" />
@@ -96,6 +96,9 @@
 		  <Pack>True</Pack>
 		  <PackagePath></PackagePath>
 		</None>
+	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="FileSystem\Pri.LongPath\" />
 	</ItemGroup>
 	<ProjectExtensions>
 		<VisualStudio>
