--- a/LibrainianUnitTests/LibrainianUnitTests.csproj
+++ b/LibrainianUnitTests/LibrainianUnitTests.csproj
@@ -18,6 +18,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Properties\**" />
+    <EmbeddedResource Remove="Properties\**" />
+    <None Remove="Properties\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Remove="C:\Users\Rick\.nuget\packages\microsoft.testplatform.testhost\16.9.1\build\netcoreapp2.1\x64\Microsoft.TestPlatform.PlatformAbstractions.dll" />
     <Content Remove="C:\Users\Rick\.nuget\packages\microsoft.testplatform.testhost\16.9.1\build\netcoreapp2.1\x64\testhost.dll" />
     <Content Remove="C:\Users\Rick\.nuget\packages\microsoft.testplatform.testhost\16.9.1\build\netcoreapp2.1\x64\testhost.exe" />
@@ -30,7 +36,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.1" />
+    <PackageReference Include="FluentAssertions" Version="5.10.3" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -44,10 +51,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Librainian\Librainian.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Properties\" />
   </ItemGroup>
 
 </Project>
