--- a/Librainian/.editorconfig
+++ b/Librainian/.editorconfig
@@ -302,6 +302,12 @@ dotnet_diagnostic.IDE0034.severity = none
 # CA1068: CancellationToken parameters must come last
 dotnet_diagnostic.CA1068.severity = warning
 
+# CA1825: Avoid zero-length array allocations
+dotnet_diagnostic.CA1825.severity = error
+
+# CA1829: Use Length/Count property instead of Count() when available
+dotnet_diagnostic.CA1829.severity = error
+
 [*.{appxmanifest,axml,build,config,cs,csproj,dbml,discomap,dtd,jsproj,lsproj,njsproj,nuspec,proj,props,proto,resw,resx,StyleCop,targets,tasks,vbproj,xml,xsd}]
 indent_style = tab
 indent_size = tab
