--- a/Librainian/Librainian.csproj
+++ b/Librainian/Librainian.csproj
@@ -3,7 +3,7 @@
 		<TargetFramework>net6.0-windows</TargetFramework>
 		<UseWindowsForms>true</UseWindowsForms>
 		<Platforms>x64</Platforms>
-		<ApplicationIcon>P:\Programming\Projects 2021\Librainian\Librainian.ico</ApplicationIcon>
+		<ApplicationIcon></ApplicationIcon>
 		<RootNamespace>Librainian</RootNamespace>
 		<AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
 		<PackageId>Librainian</PackageId>
@@ -61,12 +61,7 @@
 		</When>
 	</Choose>
 	<ItemGroup>
-	  <Compile Remove="Parsing\Parsing\**" />
-	  <EmbeddedResource Remove="Parsing\Parsing\**" />
-	  <None Remove="Parsing\Parsing\**" />
-	</ItemGroup>
-	<ItemGroup>
-		<PackageReference Include="Ben.Demystifier" Version="0.3.0" />
+		<PackageReference Include="Ben.Demystifier" Version="0.4.1" />
 		<PackageReference Include="CommandLineParser" Version="2.8.0" />
 		<PackageReference Include="JetBrains.Annotations" Version="2021.1.0" />
 		<PackageReference Include="LinqFaster.SIMD" Version="1.0.3" />
@@ -77,7 +72,7 @@
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
 		<PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Options" Version="5.0.0" />
-		<PackageReference Include="Microsoft.SqlServer.SqlManagementObjects" Version="161.46041.41" />
+		<PackageReference Include="Microsoft.SqlServer.SqlManagementObjects" Version="161.46367.54" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 		<PackageReference Include="PooledAwait" Version="1.0.49" />
 		<PackageReference Include="Rationals" Version="1.4.0" />
