--- a/Librainian/Librainian.csproj
+++ b/Librainian/Librainian.csproj
@@ -63,8 +63,11 @@
 	<ItemGroup>
 		<PackageReference Include="Ben.Demystifier" Version="0.4.1" />
 		<PackageReference Include="JetBrains.Annotations" Version="2021.1.0" />
+		<PackageReference Include="LinqFaster.Parallel" Version="1.0.2" />
 		<PackageReference Include="LinqFaster.SIMD" Version="1.0.3" />
-		<PackageReference Include="Microsoft.Data.SqlClient" Version="2.1.2" />
+		<PackageReference Include="LinqFaster.SIMD.Parallel" Version="1.0.2" />
+		<PackageReference Include="LinqFasterer" Version="2.1.0" />
+		<PackageReference Include="Microsoft.Data.SqlClient" Version="2.1.3" />
 		<PackageReference Include="Microsoft.Database.ManagedEsent" Version="2.0.1" />
 		<PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="5.0.0" />
