--- a/Librainian/.editorconfig
+++ b/Librainian/.editorconfig
@@ -1,5 +1,11 @@
 ﻿[*.cs]
 
+# IDE0058: Expression value is never used
+dotnet_diagnostic.IDE0058.severity = suggestion
+
+# IDE0034: Simplify 'default' expression
+csharp_prefer_simple_default_expression = false
+
 # IDE0055: Fix formatting
 dotnet_diagnostic.ide0055.severity = none
 
@@ -328,3 +334,9 @@ tab_width = 2
 
 # IDE0033: Use explicitly provided tuple name
 dotnet_style_explicit_tuple_names = true
+
+# IDE0046: Convert to conditional expression
+dotnet_style_prefer_conditional_expression_over_return = false
+
+# IDE0046: Convert to conditional expression
+dotnet_diagnostic.IDE0046.severity = silent
