--- a/Librainian/Librainian.csproj
+++ b/Librainian/Librainian.csproj
@@ -61,8 +61,9 @@
 		</When>
 	</Choose>
 	<ItemGroup>
+		<PackageReference Include="Azos" Version="1.20.4" />
 		<PackageReference Include="Ben.Demystifier" Version="0.4.1" />
-		<PackageReference Include="JetBrains.Annotations" Version="2021.1.0" />
+		<PackageReference Include="JetBrains.Annotations" Version="2021.2.0" />
 		<PackageReference Include="LinqFaster.Parallel" Version="1.0.2" />
 		<PackageReference Include="LinqFaster.SIMD" Version="1.0.3" />
 		<PackageReference Include="LinqFaster.SIMD.Parallel" Version="1.0.2" />
@@ -72,11 +73,13 @@
 		<PackageReference Include="Microsoft.Database.ManagedEsent" Version="2.0.1" />
 		<PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="5.0.0" />
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
 		<PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Options" Version="5.0.0" />
+		<PackageReference Include="Microsoft.IO.RecyclableMemoryStream" Version="2.1.2" />
 		<PackageReference Include="Microsoft.SqlServer.SqlManagementObjects" Version="161.46367.54" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+		<PackageReference Include="Pluralize.NET" Version="1.0.2" />
 		<PackageReference Include="PooledAwait" Version="1.0.49" />
 		<PackageReference Include="Rationals" Version="1.4.1" />
 		<PackageReference Include="ReactiveUI" Version="14.1.1" />
