--- a/Librainian/Librainian.csproj
+++ b/Librainian/Librainian.csproj
@@ -7,7 +7,7 @@
 		<RootNamespace>Librainian</RootNamespace>
 		<AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
 		<PackageId>Librainian</PackageId>
-		<Version>2020.9.6.8</Version>
+		<Version>2021.8.17</Version>
 		<Authors>Protiguous</Authors>
 		<Company>Protiguous</Company>
 		<Product>Librainian Library</Product>
@@ -21,11 +21,11 @@
 		<GeneratePackageOnBuild>false</GeneratePackageOnBuild>
 		<PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
 		<PackageLicenseFile>P:\Programming\Projects 2021\Librainian\License.md</PackageLicenseFile>
-		<AssemblyVersion>2021.5.14.9</AssemblyVersion>
-		<FileVersion>2021.5.14.9</FileVersion>
+		<AssemblyVersion>2021.8.17.7</AssemblyVersion>
+		<FileVersion>2021.8.17.7</FileVersion>
 		<GenerateSerializationAssemblies>Auto</GenerateSerializationAssemblies>
-		<LangVersion>latest</LangVersion>
-		<AnalysisLevel>latest</AnalysisLevel>
+		<LangVersion>preview</LangVersion>
+		<AnalysisLevel>preview</AnalysisLevel>
 		<EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
 		<OutputType>Library</OutputType>
 		<Nullable>enable</Nullable>
@@ -50,7 +50,7 @@
 				<DebugSymbols>true</DebugSymbols>
 				<DebugType>full</DebugType>
 				<Optimize>false</Optimize>
-				<DefineConstants>TRACE;DEBUG;noVERBOSE</DefineConstants>
+				<DefineConstants>TRACE;DEBUG;VERBOSE</DefineConstants>
 			</PropertyGroup>
 		</When>
 		<When Condition="'$(Configuration)'=='Release'">
@@ -61,17 +61,18 @@
 		</When>
 	</Choose>
 	<ItemGroup>
-		<PackageReference Include="Azos" Version="1.20.5.6" />
+		<PackageReference Include="Azos" Version="1.20.5.9" />
 		<PackageReference Include="Ben.Demystifier" Version="0.4.1" />
 		<PackageReference Include="CommandLineParser" Version="2.8.0" />
 		<PackageReference Include="JetBrains.Annotations" Version="2021.2.0" />
+		<PackageReference Include="LazyCache" Version="2.1.3" />
 		<PackageReference Include="LinqFaster.Parallel" Version="1.0.2" />
 		<PackageReference Include="LinqFaster.SIMD" Version="1.0.3" />
 		<PackageReference Include="LinqFaster.SIMD.Parallel" Version="1.0.2" />
 		<PackageReference Include="LinqFasterer" Version="2.1.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
 		<PackageReference Include="Microsoft.Data.SqlClient" Version="3.0.0" />
-		<PackageReference Include="Microsoft.Database.ManagedEsent" Version="2.0.2" />
+		<PackageReference Include="Microsoft.Database.ManagedEsent" Version="2.0.3" />
 		<PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="5.0.0" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
@@ -82,8 +83,8 @@
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 		<PackageReference Include="Pluralize.NET" Version="1.0.2" />
 		<PackageReference Include="PooledAwait" Version="1.0.49" />
-		<PackageReference Include="Rationals" Version="1.4.1" />
-		<PackageReference Include="ReactiveUI" Version="14.2.1" />
+		<PackageReference Include="Rationals" Version="2.0.0" />
+		<PackageReference Include="ReactiveUI" Version="16.1.1" />
 		<PackageReference Include="System.Linq.Async" Version="5.0.0" />
 		<PackageReference Include="System.Management" Version="5.0.0" />
 		<PackageReference Include="System.ServiceProcess.ServiceController" Version="5.0.0" />
