--- a/Librainian/Librainian.csproj
+++ b/Librainian/Librainian.csproj
@@ -2,6 +2,8 @@
 	<PropertyGroup>
 		<TargetFramework>net6.0-windows</TargetFramework>
 		<UseWindowsForms>true</UseWindowsForms>
+		<LangVersion>preview</LangVersion>
+		<AnalysisLevel>preview</AnalysisLevel>
 		<Platforms>x64</Platforms>
 		<ApplicationIcon></ApplicationIcon>
 		<RootNamespace>Librainian</RootNamespace>
@@ -24,8 +26,6 @@
 		<AssemblyVersion>2021.8.17.7</AssemblyVersion>
 		<FileVersion>2021.8.17.7</FileVersion>
 		<GenerateSerializationAssemblies>Auto</GenerateSerializationAssemblies>
-		<LangVersion>preview</LangVersion>
-		<AnalysisLevel>preview</AnalysisLevel>
 		<EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
 		<OutputType>Library</OutputType>
 		<Nullable>enable</Nullable>
@@ -50,7 +50,7 @@
 				<DebugSymbols>true</DebugSymbols>
 				<DebugType>full</DebugType>
 				<Optimize>false</Optimize>
-				<DefineConstants>TRACE;DEBUG;VERBOSE</DefineConstants>
+				<DefineConstants>TRACE;DEBUG;VERBOSE;</DefineConstants>
 			</PropertyGroup>
 		</When>
 		<When Condition="'$(Configuration)'=='Release'">
@@ -85,6 +85,7 @@
 		<PackageReference Include="PooledAwait" Version="1.0.49" />
 		<PackageReference Include="Rationals" Version="2.0.0" />
 		<PackageReference Include="ReactiveUI" Version="16.1.1" />
+		<PackageReference Include="RestSharp" Version="106.12.0" />
 		<PackageReference Include="System.Linq.Async" Version="5.0.0" />
 		<PackageReference Include="System.Management" Version="5.0.0" />
 		<PackageReference Include="System.ServiceProcess.ServiceController" Version="5.0.0" />
@@ -105,9 +106,6 @@
 		  <Pack>True</Pack>
 		  <PackagePath></PackagePath>
 		</None>
-	</ItemGroup>
-	<ItemGroup>
-	  <Folder Include="FileSystem\Pri.LongPath\" />
 	</ItemGroup>
 	<ProjectExtensions>
 		<VisualStudio>
