--- a/CodeMaid.config
+++ b/CodeMaid.config
@@ -24,6 +24,10 @@
                 serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="Cleaning_SkipRemoveAndSortUsingStatementsDuringAutoCleanupOnSave"
+                serializeAs="String">
+                <value>False</value>
+            </setting>
         </SteveCadwallader.CodeMaid.Properties.Settings>
     </userSettings>
 </configuration>
