--- a/Librainian/Librainian.csproj
+++ b/Librainian/Librainian.csproj
@@ -67,6 +67,7 @@
 		  <PrivateAssets>all</PrivateAssets>
 		  <!--<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>-->
 		</PackageReference>
+		<PackageReference Include="EntityFramework" Version="6.4.4" />
 		<PackageReference Include="Fody" Version="6.6.0">
 		  <PrivateAssets>all</PrivateAssets>
 		  <!--<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>-->
@@ -97,8 +98,8 @@
 		<PackageReference Include="PooledAwait" Version="1.0.49" />
 		<PackageReference Include="PropertyChanged.Fody" Version="3.4.0" />
 		<PackageReference Include="Rationals" Version="2.0.0" />
-		<PackageReference Include="ReactiveUI" Version="17.1.9" />
-		<PackageReference Include="RestSharp" Version="106.15.0" />
+		<PackageReference Include="ReactiveUI" Version="17.1.17" />
+		<PackageReference Include="RestSharp" Version="107.0.2" />
 		<PackageReference Include="Roslynator.Analyzers" Version="3.3.0">
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
