--- a/CodeMaid.config
+++ b/CodeMaid.config
@@ -41,6 +41,16 @@
             <setting name="Reorganizing_PrimaryOrderByAccessLevel" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="Cleaning_AutoCleanupOnFileSave" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="Formatting_IgnoreLinesStartingWith" serializeAs="String">
+                <value>&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"&gt;
+  &lt;string&gt;ReSharper disable &lt;/string&gt;
+  &lt;string&gt;ReSharper enable &lt;/string&gt;
+&lt;/ArrayOfString&gt;</value>
+            </setting>
         </SteveCadwallader.CodeMaid.Properties.Settings>
     </userSettings>
 </configuration>
