--- a/Librainian/Librainian.csproj
+++ b/Librainian/Librainian.csproj
@@ -2,8 +2,8 @@
 	<PropertyGroup>
 		<TargetFramework>net6.0-windows10.0.22000.0</TargetFramework>
 		<UseWindowsForms>true</UseWindowsForms>
-		<LangVersion>preview</LangVersion>
-		<AnalysisLevel>preview</AnalysisLevel>
+		<LangVersion>latest</LangVersion>
+		<AnalysisLevel>latest</AnalysisLevel>
 		<Platforms>x64</Platforms>
 		<ApplicationIcon></ApplicationIcon>
 		<RootNamespace>Librainian</RootNamespace>
@@ -67,6 +67,7 @@
 		  <PrivateAssets>all</PrivateAssets>
 		  <!--<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>-->
 		</PackageReference>
+		<PackageReference Include="DupImageLib" Version="1.2.0" />
 		<PackageReference Include="EntityFramework" Version="6.4.4" />
 		<PackageReference Include="Fody" Version="6.6.0">
 		  <PrivateAssets>all</PrivateAssets>
@@ -100,7 +101,7 @@
 		<PackageReference Include="PropertyChanged.Fody" Version="3.4.0" />
 		<PackageReference Include="Rationals" Version="2.0.0" />
 		<PackageReference Include="ReactiveUI" Version="17.1.17" />
-		<PackageReference Include="RestSharp" Version="107.1.1" />
+		<PackageReference Include="RestSharp" Version="107.1.2" />
 		<PackageReference Include="Roslynator.Analyzers" Version="4.0.0">
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
